// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/LogoPresenter dangerously sets inner HTML 1`] = `
<div
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={
    Object {
      "__html": "hi",
    }
  }
/>
`;

exports[`top-nav/presenters/LogoPresenter renders as a link when a link is provided 1`] = `
<a
  className="hig__top-nav__logo"
  href="https://autodesk.com"
/>
`;

exports[`top-nav/presenters/LogoPresenter renders attributes for a11y 1`] = `
<div
  aria-label="a11y label"
  className="hig__top-nav__logo"
  title="a11y title"
/>
`;

exports[`top-nav/presenters/LogoPresenter renders children that are strings with semantic markup 1`] = `
<div
  className="hig__top-nav__logo"
>
  <h1
    className="hig__top-nav__logo-text"
  >
    Autodesk HIG
  </h1>
</div>
`;

exports[`top-nav/presenters/LogoPresenter renders with child components 1`] = `
<div
  className="hig__top-nav__logo"
>
  <span
    data-test="child-component"
  />
</div>
`;

exports[`top-nav/presenters/LogoPresenter renders without props 1`] = `
<div
  className="hig__top-nav__logo"
/>
`;
